--- a/Practica2.html
+++ b/Practica2.html
@@ -5,13 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timer Lasaña</title>
     <link rel="stylesheet" href="Practica2.css">
-
-
 </head>
 <body>
-    
-   
-    
+    <div>
+        <h1>Calculadora de Edad</h1>
+     </div> 
     <script src="Practica2.js"></script>
 </body>
 </html>
